Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
             </div>
 
             <div class="copyright">
-                <p>© 2025 NovaWear. All rights reserved.</p>
+                <p>© 2025 NovaWear. All rights reserved.website created by <a herf = "https://www.instagram.com/majd.hdidou/?next=%2Fmjjidoo%2F">majd</a></p>
             </div>
         </div>
     </footer>
@@ -897,4 +897,5 @@
         });
     </script>
 </body>
+
 </html>
