--- a/index.html
+++ b/index.html
@@ -854,7 +854,9 @@
             </div>
 
             <div class="copyright">
-                <p>© 2025 NovaWear. All rights reserved.website created by <a herf = "https://www.instagram.com/majd.hdidou/?next=%2Fmjjidoo%2F">majd</a></p>
+                <p>© 2025 NovaWear. All rights reserved. website created by  <a herf = "https://www.instagram.com/majd.hdidou"> 
+                    majd
+                </a></p>
             </div>
         </div>
     </footer>
@@ -899,3 +901,4 @@
 </body>
 
 </html>
+
