--- a/index.html
+++ b/index.html
@@ -392,6 +392,17 @@
             border-radius: 0.75rem;
             margin-bottom: 2rem;
         }
+        .creator-link {
+    color: var(--primary-purple);
+    text-decoration: none;
+    font-weight: 600;
+    transition: color 0.3s;
+}
+
+.creator-link:hover {
+    color: var(--secondary-blue);
+    text-decoration: underline;
+}
 
         .material-title {
             font-size: 0.75rem;
@@ -853,11 +864,9 @@
                 </div>
             </div>
 
-            <div class="copyright">
-                <p>© 2025 NovaWear. All rights reserved. website created by  <a herf = "https://www.instagram.com/majd.hdidou"> 
-                    majd
-                </a></p>
-            </div>
+           <div class="copyright">
+    <p>© 2025 NovaWear. All rights reserved. | Created by <a href="https://www.instagram.com/majd.hdidou/" target="_blank" class="creator-link">Majd</a></p>
+</div>
         </div>
     </footer>
 
@@ -901,4 +910,5 @@
 </body>
 
 </html>
+
 
